Fixed cutoff mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3804,11 +3804,11 @@ input, select, textarea {
 		@media screen and (max-width: 360px) {
 
 			#wrapper section {
-				margin: 2.25rem 0 0 0;
+				margin-top: 0rem;
 			}
 
-			#wrapper > section {
-				margin: 0;
+			#wrapper .intro{
+				margin-top: 5rem;
 			}
 
 				#wrapper > section > header {
